# chatbot

./: README.md  pyproject.toml
app/: app.py  streamlit_app.py
app/pages/: chat_page.py  login_page.py
mcp_server/: server.py
mcp_server/tools/: demo.py  websearch.py
src/: agent.py  main.py  mcp_client.py
src/dao/: basic_crud.py  login.py
src/util/: stream_gen.py
